tensor parallel processing via --pType tensor, pipeline remains default